--- a/public/backend/assets/css/style.css
+++ b/public/backend/assets/css/style.css
@@ -8096,3 +8096,18 @@ img.admin-avatar{
 #wrapper-content .dashboard-cards .card {
     margin-bottom: 20px !important;
 }
+
+.min-w-25 {
+    min-width: 25% !important;
+}
+.max-w-50 {
+    max-width: 50% !important;
+}
+
+.flex-grow-0 {
+    flex-grow: 0 !important;
+}
+
+.flex-shrink-0 {
+    flex-shrink: 0 !important;
+}
